--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 				<div class="inner">
 					<a href="index.html" class="logo">Brandon Scanlon</a>
 					<nav id="nav">
-						<a href="index.html">Home</a>
-						<a href="generic.html">Page 2</a>
-						<a href="elements.html">Page 3</a>
+						<a href="index.html"><b>Home</b></a>
+						<a href="generic.html"><b>Page 2</b></a>
+						<a href="elements.html"><b>Page 3</b></a>
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 				</div>
