--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="logo">Brandon Scanlon</a>
+					<a href="index.html" class="logo"><strong><u>Brandon Scanlon</u></strong></a>
 					<nav id="nav">
 						<a href="index.html"><b>Home</b></a>
 						<a href="generic.html"><b>Page 2</b></a>
