--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 				<div class="inner">
 					<a href="index.html" class="logo"><strong><u>Brandon Scanlon</u></strong></a>
 					<nav id="nav">
-						<a href="index.html"><b>Home</b></a>
-						<a href="generic.html"><b>Page 2</b></a>
-						<a href="elements.html"><b>Page 3</b></a>
+						<a href="index.html"><strong><u>Home</u></strong></a>
+						<a href="generic.html"><strong><u>Page 2</u></strong></a>
+						<a href="elements.html"><strong><u>Page 3</u></strong></a>
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 				</div>
