--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<h1>Brandon Scanlon</h1>
-				<p>Full Stack Developer</p>
+				<h1><strong>Brandon Scanlon</strong></h1>
+				<p><b>Software Engineer</b></p>
 			</section>
 
 		<!-- One -->
