--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<h1><strong>Brandon Scanlon</strong></h1>
+				<h1><strong>Brandon Scanlon Test</strong></h1>
 				<p><b>Software Engineer</b></p>
 			</section>
 
