--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="logo"><strong><u>Brandon Scanlon</u></strong></a>
+					<a href="index.html" class="logo"><strong><u>Brandon Scanlon Test</u></strong></a>
 					<nav id="nav">
 						<a href="index.html"><strong><u>Home</u></strong></a>
 						<a href="generic.html"><strong><u>Page 2</u></strong></a>
