--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="logo"><strong><u>Brandon Scanlon Test</u></strong></a>
+					<a href="index.html" class="logo"><strong><u>Brandon Scanlon 1</u></strong></a>
 					<nav id="nav">
 						<a href="index.html"><strong><u>Home</u></strong></a>
 						<a href="generic.html"><strong><u>Page 2</u></strong></a>
@@ -29,7 +29,7 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<h1><strong>Brandon Scanlon Test</strong></h1>
+				<h1><strong>Brandon Scanlon 2</strong></h1>
 				<p><b>Software Engineer</b></p>
 			</section>
 
