--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h1><strong>Brandon Scanlon 2</strong></h1>
-				<p><b>Software Engineer</b></p>
+				<h3><b>Software Engineer</b></h3>
 			</section>
 
 		<!-- One -->
