--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 	<body>
 
 		<!-- Header -->
-			<header id="header">
+
+		<div class="header" id="header">
+			<h2>Test Header</h2>
+		</div>
+			<!-- <header id="header">
 				<div class="inner">
 					<a href="index.html" class="logo"><strong><u>Brandon Scanlon 1</u></strong></a>
 					<nav id="nav">
@@ -20,7 +24,7 @@
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 				</div>
-			</header>
+			</header> -->
 
 		<!-- Banner -->
 			<section id="banner">
